syntax = "proto3";

package inventory;

option go_package = "/proto;inventorypb";

import "google/protobuf/empty.proto";

message CreateProductRequest {
  string name = 1;
  double price = 2;
  string category = 3;
  int32 stock = 4;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  string category = 4;
  int32 stock = 5;
}

message GetProductRequest {
  string id = 1;
}

message DeleteProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  string category = 4;
  int32 stock = 5;
}

message ListProductsRequest {} // add filters later if needed

message ListProductsResponse {
  repeated ProductResponse products = 1;
}

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}
